added events section

--- a/style.css
+++ b/style.css
@@ -62,3 +62,8 @@
 .button-1{
     border-color: var(--dark-blue);
 }
+.text-shadow {
+    text-shadow: 2px 2px 4px rgba(0,0,0,0.5),
+                -2px -2px 4px rgba(0,0,0,0.5);
+       
+}
